--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/favicon.ico" />
-    <link rel="stylesheet" href="styles/responsive.css" />
-    <link rel="icon" href="styles/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styles/animations.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="favicon.ico" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="animations.css" />
   </head>
   <body>
     <header class="navbar">
