--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/script1.js"></script>
+    <script src="script.js"></script>
+    <script src="script1.js"></script>
   </body>
 </html>
